<resources>
    <string name="app_name">QUIZ_APP</string>
    <string name="truebutton">TRUE</string>
    <string name="falsebutton">FALSE</string>
    <string name="nextbutton">NEXT</string>
    <string name="India">INDIA-DELHI</string>
    <string name="Pak">PAK-CHICAGO</string>
    <string name="America">AMERICA-california</string>
    <string name="Sri">SRI-colombo</string>
    <string name="South">SOUTH-capetown</string>
    <string name="correct_toast">CORRECT</string>
    <string name="incorrect_toast">INCORRECT</string>
    <string name="pb">PREVIOUS</string>
    <string name="nb">NEXT</string>
    <string name="cb">CHEAT</string>
    <string name="hb">HINT</string>
    <string name="warning">do u wanna cheat??/</string>
    <string name="show">SHOW ANS</string>
</resources>
