<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    </TextView>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/truebutton"
    android:id="@+id/tb"
    android:layout_gravity="center_vertical"/>

    <Button
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/falsebutton" /></LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextbutton"
            android:id="@+id/nb"
            />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pb"
                android:text="@string/pb"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hb"
                android:id="@+id/hb"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb"
                android:id="@+id/cb"/>
</LinearLayout>

</LinearLayout>
